--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
      <!-- Collect the nav links, forms, and other content for toggling --> 
      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
       <ul class="nav navbar-nav nav-custom"> 
+       <li><a href="/springcloud" title="SpringCloud">SpringCloud</a></li>
        <li class="dropdown"> <a href="/bcsj" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">编程设计<span class="caret"></span></a> 
         <ul class="dropdown-menu"> 
          <li><a href="/bcsj/css/" title="CSS">CSS</a> </li> 
